# MyStudy

./: README.md  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/example/liumin/mystudy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/aidl/example/liumin/mystudy/: ItemManager.aidl
app/src/main/aidl/example/liumin/mystudy/ipc/: Item.aidl
app/src/main/assets/: create.sql
app/src/main/cpp/: multi.cpp  native-lib.cpp
app/src/main/cpp/add/: CMakeLists.txt  add.cpp  add.h
app/src/main/cpp/take/: CMakeLists.txt  take.cpp  take.h
app/src/main/java/example/liumin/mystudy/activity/: DesActivity.java  Item.java  TestActivity.java
app/src/main/java/example/liumin/mystudy/base/: BaseActivity.java  BaseFragment.java  MainActivity.java  OnMyClick.java
app/src/main/java/example/liumin/mystudy/broadcastreceiver/: Constant.java  MyReceiver.java  ReceiverActivity.java
app/src/main/java/example/liumin/mystudy/contentprovider/: MyProvider.java  (+1 more)
app/src/main/res/layout/: acitivity_ipc.xml  acitivity_jni.xml  activity_asynctask.xml  activity_contentprovider.xml  activity_des.xml  activity_fragment.xml  activity_geasure.xml  activity_main.xml  activity_receiver.xml  activity_sqlite.xml  activity_test.xml  baseactivity_imagedialog.xml  baseactivity_textdialog.xml  dialog_sqlite.xml  fragment_geasure.xml  fragment_static.xml  item_sql.xml
app/src/main/res/layout-land/: activity_test.xml
app/src/main/res/menu/: menu_base.xml  menu_cp.xml
app/src/test/java/example/liumin/mystudy/: ExampleUnitTest.java
(+21 files in other folders)
